# py-ai-chatbot-study

./: README.md  basic-chatbot.py  pyproject.toml  rag-chatbot.py  rag-text-trainer.py
db/chroma_db/: chroma.sqlite3
samples/: sample01.txt
